fixed continue button alignment.

--- a/app/assets/sass/prototype-8.scss
+++ b/app/assets/sass/prototype-8.scss
@@ -521,8 +521,11 @@ padding:  0px 20px 30px 20px;
 
 // Save for later link
 
+.text-center {
+  text-align: center;
+}
+
 .save-for-later {
-padding-left: 30px;
-padding-top: 8px;
+  padding-top: 7px !important;
 }
 
